Fix spacing rules (closes #5)

--- a/assets/css/portrait.css
+++ b/assets/css/portrait.css
@@ -40,28 +40,20 @@ nav#details {
 /* Gallery */
 
 div#gallery li {
-  margin: 0 -2rem;
-  padding: 2rem;
-}
-
-div#gallery li.full {
-  padding: 0;
-}
-
-div#gallery li[class=""] + li[class=""],
-div#gallery li[class="viewing"] + li[class=""],
-div#gallery li.flat + li.flat,
-div#gallery li:first-of-type.flat {
-  padding-top: 0;
-}
-
-div#gallery li:last-of-type:not([class=""]) {
-  padding-bottom: 0;
+  margin: 2rem -2rem;
+  padding: 0 2rem;
 }
 
 @media (prefers-color-scheme: light) {
-  div#gallery li:last-of-type.dark-bg {
-    padding-bottom: 2rem;
+  div#gallery li[class=""],
+  div#gallery li[class="viewing"] {
+    padding: 2rem;
+  }
+
+  div#gallery li[class=""] + li[class=""],
+  div#gallery li[class="viewing"] + li[class=""] {
+    margin-top: -2rem;
+    padding-top: 0;
   }
 }
 
